fixed spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -55,14 +55,18 @@
 
 @media (max-width: 1300px) {
   .main {
-    grid-template-columns: 1.2rem 1fr 1fr 1fr 1.2rem;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1.2rem 2.5rem 1.2rem 1fr 5rem;
     grid-template-areas: 
-      ". . . . ."
-      ". t t t ."
-      ". . . . ."
-      ". i i i ."
-      "m m m m m";
+      ". . ."
+      "t t t"
+      ". . ."
+      "i i i"
+      "m m m";
+  }
+  
+  .collapsed .main {
+    grid-template-columns:1fr 1fr 1fr;
   }
 
   .navbar {
@@ -93,10 +97,6 @@
     display: none;
   }
 
-  .collapsed .main {
-    grid-template-columns: 1.2rem 1fr 1fr 1fr 1.2rem;
-  }
-
   .overlay {
     position: fixed;
     top: 0;
@@ -118,6 +118,7 @@
 
   .miniPlayer {
     display: block;
+
     grid-area: m;
     width: 100%;
     height: 100%;
